--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/debug-pack": "^1.0",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
